# Sparrow

./: .env.example  .gitignore  .replit  =2.18.0  CLAUDE.md  DEV_LOG.md  LICENSE  PRODUCT_OVERVIEW.md  PROJECT_BRIEF.md  README.md  config.py  generate.py  main.py  package-lock.json  package.json  pyproject.toml  shows.json  start.sh
.claude/: settings.local.json
output/: episodes.json
output/sparrow/: feed.xml  noctua.db
scripts/: backfill.py  gmail_auth.py  manual_publish.py  notebooklm_login.py
src/: content_parser.py  database.py  digest_compiler.py  email_fetcher.py  episode_manager.py  exceptions.py  feed_builder.py  gcs_storage.py  llm_client.py  models.py  notebooklm.py  topic_classifier.py  twitter_fetcher.py
tests/: test_content_parser.py  test_database.py  test_digest_compiler.py  test_email_fetcher.py  test_episode_manager.py  test_feed_builder.py  test_notebooklm.py  test_preparation_workflow.py  test_topic_classifier.py  test_weekly_lifecycle.py
